--- a/APPS/tutget-main/tutget-ui/src/index.html
+++ b/APPS/tutget-main/tutget-ui/src/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <script src="https://kit.fontawesome.com/5f611c366b.js" crossorigin="anonymous"></script>
 </head>
 <body style="margin:0; padding:0" class="h-100">
   <script type="text/javascript" src="./assets/js/bootstrap.bundle.min.js"></script>
